working on workout display

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,13 @@
 @import '~bootstrap/scss/bootstrap';
+
+body {
+  display: inline-block;
+  background-color: #90BEDE;
+  font-family: Muli, sans-serif;
+  font-weight: bold;
+  color: #779CB7;
+  margin-top: 30px;
+  text-align: center;
+  font-size: 10px;
+  color: black;
+}
